2001-10-25  Dan Winship  <danw@ximian.com>

	* configure.in: Fix up the networking library checks to work on
	Solaris. Check for inet_pton. (Solaris doesn't have inet_aton.)

	* src/libsoup/soup-socket-unix.c (soup_address_new): Use inet_pton
	instead of inet_aton if available.

2001-10-22  Joe Shaw  <joe@ximian.com>

	* src/soup-ssl-proxy/soup-ssl-proxy.c (soup_ssl_proxy_readwrite):
	Make sure we handle G_IO_IN before we handle G_IO_HUP so we don't
	lose data on the pipe, as you can receive both at the same time.
	Ian Peters actually found this, but I am his commit monkey.

2001-10-22  JP Rosevear  <jpr@ximian.com>

	* src/libsoup/soup-dav.c (soup_dav_response_new): use new error
	api

	* src/libsoup/soup-queue.c (soup_parse_headers): ditto

	* src/libsoup/soup-message.c (soup_message_set_error_full): ditto
	(soup_message_set_error): ditto

2001-10-21  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.h: Reorganize.

	* src/libsoup/Makefile.am (libsoupinclude_HEADERS): Add soup-error.h.
	(libsoup_la_SOURCES): Add soup-error.c.

	* src/libsoup/soup-error.[ch]: Move SoupKnownErrorCode and
	SoupErrorClass defines to here.  Move soup_get_error_phrase and
	soup_get_error_class here, and rename to soup_error_get_phrase and
	soup_error_get_class.

2001-10-19  Alex Graveley  <alex@ximian.com>

	This is the first attempt at authentication inheritence, it
	still needs some work.  Auth headers are always sent no matter
	what, auth realms are not respected, auth data in the uri is
	ignored unless an existing auth attempt fails, and auth data
	should be registered at context creation time.

	* src/libsoup/soup-auth.c (digest_parse_func): Compute a1 hash
	"user:realm:passwd:nonce:cnonce" here, to cut down on per-request
	overhead. Accept a SoupUri from which to get auth info.
	(basic_parse_func): Base64 encode user:passwd here for same
	reason. Accept a SoupUri for getting auth info.
	(compute_response): Get uri path from message instead of SoupAuth.